segunda edicion cambios
segunda edicion cambios

--- a/Bloque 2/Sesion 1/Ejemplos/Ejemplo 1 Numpy.ipynb
+++ b/Bloque 2/Sesion 1/Ejemplos/Ejemplo 1 Numpy.ipynb
@@ -36,7 +36,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1. Crear numpy array"
+    "# 1. Crear numpy array\n",
+    "# 1. Create numpy array"
    ]
   },
   {
@@ -190,7 +191,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. Acceder a los datos"
+    "# 2. Acceder a los datos\n",
+    "# 2. Data access"
    ]
   },
   {
@@ -326,7 +328,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3. 2D y 3D (Matrices)"
+    "# 3. 2D y 3D"
    ]
   },
   {
