--- a/Bloque 2/Sesion 1/HomeWorks/Homework_1.ipynb
+++ b/Bloque 2/Sesion 1/HomeWorks/Homework_1.ipynb
@@ -18,7 +18,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1 Instala las librerías "
+    "Read the file \"Exercise_3_auto.csv\" (which you can find in the repository), assign the content to a variable of type DataFrame and save this variable in a file of type CSV using the symbol \"|\" as separator with the name \"Exercise_3_auto_new.csv\". Finally run the verification code and paste the result into the response box."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1 Instala los módulos\n",
+    "## 1 Install the moduls"
    ]
   },
   {
@@ -43,21 +51,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2 Introduce aqui tus celdas de código"
+    "## 2 Introduce aqui tus celdas de código\n",
+    "## 2 Introduce your code here"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3 Código de comprobación <span style=\"color:red\"> ¡¡¡no tocar!!! </span>."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Código de comprobación"
+    "## 3 Código de comprobación <span style=\"color:red\"> ¡¡¡no tocar!!! </span>.\n",
+    "## 3 Check code <span style=\"color:red\"> ¡¡¡don´t touch!!! </span>."
    ]
   },
   {
@@ -71,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,8 +100,16 @@
     "\n",
     "    hasher.update(buf)\n",
     "\n",
-    "print(\"Pegar este resultado en el cuadrado de la respuesta: \" + hasher.hexdigest())"
+    "print(\"Pegar este resultado en el cuadrado de la respuesta: \" + hasher.hexdigest())\n",
+    "print(\"Paste thes result in the answer box: \" + hasher.hexdigest())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -103,7 +128,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
