--- a/Bloque 2/Sesion 1/HomeWorks/Homework_2.ipynb
+++ b/Bloque 2/Sesion 1/HomeWorks/Homework_2.ipynb
@@ -18,7 +18,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1 Instala las librerías "
+    "Read the file \"titanic3.xlsx\", assign the content to a variable of type DataFrame and save this variable in a file of type CSV with the name \"titanic3.csv\". Finally run the verification code and paste the result in the answer box in the Microsoft Forms questionnaire"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1 Instala los módulos \n",
+    "## 1 Install the moduls"
    ]
   },
   {
@@ -45,21 +53,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2 Introduce aqui tus celdas de código"
+    "## 2 Introduce aqui tus celdas de código\n",
+    "## 2 Introduce here your code cells"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3 Código de comprobación <span style=\"color:red\"> ¡¡¡no tocar!!! </span>."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Código de comprobación"
+    "## 3 Código de comprobación <span style=\"color:red\"> ¡¡¡no tocar!!! </span>.\n",
+    "## 3 Checking code <span style=\"color:red\"> Don´t touch!!! </span>."
    ]
   },
   {
@@ -112,7 +129,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
