--- a/Bloque 2/Sesion 1/HomeWorks/Homework_3.ipynb
+++ b/Bloque 2/Sesion 1/HomeWorks/Homework_3.ipynb
@@ -11,14 +11,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lee el archivo \"titanic3.xlsx\", asigna el contenido a una variable de tipo DataFrame y guarda esta variable en un archivo de tipo JSON con el nombre \"titanic3.json\". Por último ejecuta el código de comprobación y pega el resultado en el cuadro de respuesta en el cuestionario de Microsoft Forms"
+    "Lee el archivo \"titanic3.xlsx\", asigna el contenido a una variable de tipo DataFrame y guarda esta variable en un archivo de tipo JSON con el nombre \"titanic3.json\". Por último ejecuta el código de comprobación y pega el resultado en el cuadro de respuesta en el cuestionario de Microsoft Forms\n",
+    "\n",
+    "Read the file \"titanic3.xlsx\", assign the content to a variable of type DataFrame and save this variable in a file of type JSON with the name \"titanic3.json\". Finally run the verification code and paste the result in the answer box in the Microsoft Forms questionnaire"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1 Instala las librerías "
+    "## 1 Instala los módulos \n",
+    "## 1 Install the moduls"
    ]
   },
   {
@@ -45,21 +48,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2 Introduce aqui tus celdas de código"
+    "## 2 Introduce aqui tus celdas de código\n",
+    "## 2 Introduce here your code cells"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3 Código de comprobación <span style=\"color:red\"> ¡¡¡no tocar!!! </span>."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Código de comprobación"
+    "## 3 Código de comprobación <span style=\"color:red\"> ¡¡¡no tocar!!! </span>.\n",
+    "## 3 Checking code <span style=\"color:red\"> Don´t touch!!! </span>."
    ]
   },
   {
@@ -112,7 +117,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
