--- a/Bloque 2/Sesion 2/Homeworks/Homework_1.ipynb
+++ b/Bloque 2/Sesion 2/Homeworks/Homework_1.ipynb
@@ -18,6 +18,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Use the \"Homework 1\" template for this exercise. Read the file \"Titanic3.xlsx\" (which you can find in the repository), then fill the null data of the column \"age\" with the mean (use the functions that we have seen in this block) of the values ​​of this column (take only the integer part, of the resulting mean, Example 23.7534 would be 23), save the resulting DataFrame in a file called \"Titanic3_edad_mean.csv\". Finally run the verification code and paste the result into the response box."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 1 Instala las librerías "
    ]
   },
@@ -103,7 +110,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
