--- a/Bloque 2/Sesion 2/Homeworks/Homework_2.ipynb
+++ b/Bloque 2/Sesion 2/Homeworks/Homework_2.ipynb
@@ -18,6 +18,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Use the \"Homework 2\" template for this exercise. Read the file \"Titanic3.xlsx\" (which you can find in the repository), perform a filter with the records with \"fare\" greater than 100 and with \"age\" greater or equal to 18, save the resulting DataFrame in a file called \"Titanic3_filtro.csv\". Finally run the verification code and paste the result into the response box."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 1 Instala las librerías "
    ]
   },
@@ -112,7 +119,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
