--- a/Bloque 2/Sesion 2/Homeworks/Homework_3.ipynb
+++ b/Bloque 2/Sesion 2/Homeworks/Homework_3.ipynb
@@ -8,13 +8,23 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Usa la plantilla \"Homework 3\" . Nos han enviado un informe “athlete_score.csv” con la puntuación de 2300 atletas que han obtenido según su desarrollo en las diferentes pruebas realizadas. Nos han pedido que unamos estos datos al Excel de información “athlete_info.xlsx”, pero quieren que sólo los atletas que tengan asignado un score aprezcan en el informe final. Este archivo se llamará “atletas_info_score.csv”\n",
     "\n",
     "Apunte: en la tabla final score tiene que ser la última columna del DataFrame, por lo que hay que hacer la unión \"athlete_info\" con \"athlete_score\" y no al reves). "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use the \"Homework 3\" template. You have recived a report \"athlete_score.csv\" with the score of 2300 athletes that have been obtained according to their development in the different tests carried out. You have been asked to join this data with the information Excel \"athlete_info.xlsx\", but you want only to show, in the final report, the athletes who have a score assigned. This file will be called \"athletes_info_score.csv\"\n",
+    "\n",
+    "Finally run the verification code and paste the result into the response box.\n",
+    "\n",
+    "Note: in the final table the score column should be the last column of the DataFrame, so you have to make the union \"athlete_info\" with \"athlete_score\" and not the other way)."
    ]
   },
   {
@@ -122,7 +132,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
