--- a/Bloque 2/Sesion 2/Homeworks/Homework_4.ipynb
+++ b/Bloque 2/Sesion 2/Homeworks/Homework_4.ipynb
@@ -8,13 +8,21 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Carga el archoivo \"winequality-red.csv\" y filtra los vinos que tengan \"quality\" mayor o igual a 6. Por otro lado carga el archivo \"winequality-white.csv\" y realiza el mismo filtro. Posteriormente une todos los datos en un sólo DataFrame y guarda el resultado en un archivo llamado \"winequality-all.csv\". Por último ejecuta el código de comprobación y pega el resultado en el cuadro de respuesta. \n",
     "\n",
     "Apunte: en la tabla final los vinos tintos tienen que quedar arriba (primeros registros) y los blancos abajo (últimos registros)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use the \"Homework 4\" template. Load the file \"winequality-red.csv\" and filter the wines that have \"quality\" greater than or equal to 6. On the other hand, load the file \"winequality-white.csv\" and perform the same filter. After, joins all the data in a single DataFrame and saves the result in a file called \"winequality-all.csv\". Finally run the verification code and paste the result into the response box.\n",
+    "\n",
+    "Note: in the final table the red wines must be at the top (first records) and the whites at the bottom (last records)"
    ]
   },
   {
@@ -122,7 +130,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
