--- a/Bloque 3/Sesion 2/Homework/Homework_1.ipynb
+++ b/Bloque 3/Sesion 2/Homework/Homework_1.ipynb
@@ -21,13 +21,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "To do"
-   ]
+    "To carry out this exercise it is necessary to use the \"Homework 1\" template. Perform the following tasks:\n",
+    "\n",
+    "* Connect to the database of the file \"chinook.db\"\n",
+    "* Make a query in the DB, in the table \"customers\" extract the records whose country is Canada and ordered by the surname (LastName) in alphabetical order. Show only the following columns: CustomerId, FistName, LasName, and Email in this order.\n",
+    "\n",
+    "\n",
+    "Finally save the resulting DataFrame with the name \"homework_1_final.csv\" and launch the verification code. Copy the result as an answer."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
