--- a/Bloque 3/Sesion 2/Homework/Homework_2.ipynb
+++ b/Bloque 3/Sesion 2/Homework/Homework_2.ipynb
@@ -20,6 +20,18 @@
    ]
   },
   {
+   "source": [
+    "To perform this exercise it is necessary to use the \"Homework 2\" template. Perform the following tasks:\n",
+    "\n",
+    "- Connect to the database of the file \"chinook.db\"\n",
+    "- Make a query in the DB, which shows the following information of the first 10 invoices, ordered by \"InvoceId\" in this order: \"InvoceId\", \"InvoceDate\", \"FirstName\" and \"LastName\"\n",
+    "\n",
+    "Finally save the resulting DataFrame with the name \"homework_2_final.csv\" and launch the verification code. Copy the result as an answer."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
