--- a/Bloque 3/Sesion 2/Homework/Homework_3.ipynb
+++ b/Bloque 3/Sesion 2/Homework/Homework_3.ipynb
@@ -22,6 +22,18 @@
    ]
   },
   {
+   "source": [
+    "To perform this exercise it is necessary to use the \"Homework 3\" template. Perform the following tasks:\n",
+    "\n",
+    "- Connect to the database of the file \"chinook.db\"\n",
+    "- (Query 1) Make a query in the DB, which shows the entire table \"invoices\" and assigns the result to a DataFrame type variable called \"invoices_df\"\n",
+    "- (Query 2) Make a query in the DB, which shows the entire table \"invoice_items\" and assigns the result to a variable of type DataFrame called \"invoice_items_df\"\n",
+    "- (Query 3) Using PandasSQL, performs a query on the two generated DataFrames that show the following fields of all the invoices BillingAdrdress, BillingCity, TrackId and UnitPrice, in this order. We do not want to show data that is not complete. Finally save the resulting DataFrame with the name \"homework_3_final.csv\" and launch the verification code. Copy the result as an answer."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
